# dev_monitor

./: .coverage  .gitignore  LICENSE  README.md  __main__.py  pyproject.toml  requirements.txt
src/: __init__.py  app.py  config.py  exceptions.py
src/bus/: __init__.py  event.py  scheduler.py
src/controllers/: __init__.py  main.py
src/models/: __init__.py  device.py  device_repository.py
src/services/: __init__.py  device_service.py  scheduler_service.py
src/ui/: __init__.py  device_list_widget.py  dialogue_manager.py  interface.py  progress_manager.py  ui_commands.py  ui_event_handlers.py
src/utils/: logger.py  validators.py
tests/: validation_utils_tests.py
